[gd_scene load_steps=8 format=3 uid="uid://cajkim51p54be"]

[ext_resource type="Texture2D" uid="uid://dw0u0hdsc73je" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 114200.png" id="1_1q8mu"]
[ext_resource type="Script" uid="uid://bhjegbpcyph4m" path="res://Scene/Common/Footer/FooterHUD.gd" id="1_fduon"]
[ext_resource type="Texture2D" uid="uid://bg1csq6emlxru" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 114255.png" id="2_fduon"]
[ext_resource type="Texture2D" uid="uid://cf0r6kmdoim1r" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 182526.png" id="3_xiws6"]
[ext_resource type="Texture2D" uid="uid://dulqq4skcdxyr" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 182544.png" id="4_unkn5"]
[ext_resource type="Texture2D" uid="uid://c6nojutq318uu" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 182843.png" id="5_dx6bh"]
[ext_resource type="Texture2D" uid="uid://6ke45wua0xh6" path="res://Assets/ui/IconesMinimalistasTemporarios/Captura de tela 2025-09-26 182600.png" id="6_60db6"]

[node name="FooterHud" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fduon")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 3.0
offset_top = -76.0
offset_right = 343.0
offset_bottom = -3.0
scale = Vector2(1.56619, 1.0118)
mouse_filter = 0
theme_override_constants/separation = 13

[node name="StoreButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.646029, 0.646029, 0.646029, 1)
layout_mode = 2
texture_normal = ExtResource("1_1q8mu")
texture_pressed = ExtResource("2_fduon")
stretch_mode = 5

[node name="InventoryButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_xiws6")
texture_pressed = ExtResource("2_fduon")
stretch_mode = 0

[node name="StatusButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_unkn5")
texture_pressed = ExtResource("2_fduon")
stretch_mode = 0

[node name="ToBeDefinedAButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_dx6bh")
texture_pressed = ExtResource("2_fduon")
stretch_mode = 0

[node name="ToBeDefinedBButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_60db6")
texture_pressed = ExtResource("2_fduon")
stretch_mode = 0
